--- a/Data Project.ipynb
+++ b/Data Project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -109,24 +109,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.0\n",
-      "0.129012855285\n"
-     ]
-    }
-   ],
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true,
+    "scrolled": true
+   },
+   "outputs": [],
    "source": [
     "def termfreq(term, doc):\n",
+    "    #print(\"tweet:\", doc, \"length of tweet:\", len(doc))\n",
     "    length = len(doc)\n",
     "    frequency = doc.count(term)\n",
     "    return frequency/length\n",
-    "\n",
     "\n",
     "def count_doc_with_term(term, tweets):\n",
     "    ctr = 0\n",
@@ -135,13 +129,15 @@
     "            ctr = ctr + 1\n",
     "    return ctr\n",
     "\n",
+    "#idf = amount_of_tweets/amount_of_tweets_with_word\n",
     "def idf(term, tweets):\n",
-    "    N = len(tweets)\n",
-    "    return np.log10(N/count_doc_with_term(term, tweets))\n",
+    "    num_docs = len(tweets)\n",
+    "    num_docs_with_word = count_doc_with_term(term, tweets)\n",
+    "    return np.log10(num_documents/num_docs_with_word)\n",
     "\n",
     "def create_vocabulary(tweets):\n",
     "    vocabulary = set()\n",
-    "    for tweet in test:\n",
+    "    for tweet in tweets:\n",
     "        words = [w for w in tweet]\n",
     "        vocabulary.update(words)\n",
     "    return list(vocabulary)\n",
@@ -149,26 +145,19 @@
     "def compute_word_idf(tweets):\n",
     "    vocabulary = create_vocabulary(tweets)\n",
     "    word_idf = collections.defaultdict(lambda: 0)\n",
-    "    for tweet in tweets:\n",
-    "        words = set(tweet)\n",
-    "        for w in words:\n",
-    "            word_idf[w] +=1\n",
-    "            \n",
+    "    #for tweet in tweets:\n",
+    "    #    words = set(tweet)\n",
+    "    #    for w in words:\n",
+    "    #        word_idf[w] +=1        \n",
     "    for w in vocabulary:\n",
     "        word_idf[w] = idf(w, tweets)\n",
     "    return word_idf\n",
     "    \n",
     "def tf_idf(term, doc, tweets):\n",
-    "    return termfreq(term, doc) * word_idf[term]\n",
-    "\n",
-    "#test tweets\n",
-    "test = [[\"this\",\"a\",\"a\",\"is\",\"sample\"],[\"this\",\"another\",\"another\",\"is\",\"example\",\"example\",\"example\"]]\n",
-    "\n",
-    "word_idf = compute_word_idf(test)      \n",
-    "\n",
-    "\n",
-    "print(tf_idf('example', test[0] ,test)) #should be 0\n",
-    "print(tf_idf('example', test[1] ,test))#shouldbe ~0.13"
+    "    if doc != []:\n",
+    "        return termfreq(term, doc) * word_idf[term]\n",
+    "    else:\n",
+    "        return 0"
    ]
   },
   {
@@ -187,77 +176,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 sample\n",
-      "1 another\n",
-      "2 is\n",
-      "3 this\n",
-      "4 example\n",
-      "5 a\n",
-      "0 sample\n",
-      "1 another\n",
-      "2 is\n",
-      "3 this\n",
-      "4 example\n",
-      "5 a\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>[0.0602059991328, 0.0, 0.0, 0.0, 0.0, 0.120411...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>[0.0, 0.0860085701897, 0.0, 0.0, 0.12901285528...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                   0\n",
-       "0  [0.0602059991328, 0.0, 0.0, 0.0, 0.0, 0.120411...\n",
-       "1  [0.0, 0.0860085701897, 0.0, 0.0, 0.12901285528..."
-      ]
-     },
-     "execution_count": 83,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def tweet_features(tweets):\n",
     "    vocabulary = create_vocabulary(tweets)\n",
@@ -265,16 +188,84 @@
     "    for i, tweet in enumerate(tweets):\n",
     "        a = np.zeros(len(vocabulary))\n",
     "        for j, word in enumerate(vocabulary):\n",
-    "            print(j, word)\n",
+    "            #print(j, word)\n",
     "            a[j] = tf_idf(word, tweet, tweets)\n",
     "        tweet_features[i] = a\n",
     "    return tweet_features\n",
-    "        \n",
-    "        \n",
-    "pd.DataFrame(tweet_features(test))\n",
-    "    \n",
-    "    \n",
-    "#todo = fix it"
+    "\n",
+    "\n",
+    "test = [[\"this\",\"a\",\"a\",\"is\",\"sample\"],[\"this\",\"another\",\"another\",\"is\",\"example\",\"example\",\"example\"]]\n",
+    "test2 = [[\"new\",\"times\",\"york\"],[\"new\",\"post\",\"york\"],[\"angeles\",\"los\",\"times\"]]\n",
+    "\n",
+    "\n",
+    "word_idf = compute_word_idf(all_tweets)\n",
+    "tweet_features = tweet_features(all_tweets)\n",
+    "\n",
+    "feature_matrix = np.vstack(tweet_features)\n",
+    "pd.DataFrame(feature_matrix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cosine_distance(v1,v2):\n",
+    "    nomer = np.dot(v1, v2)\n",
+    "    denomer = np.dot(np.linalg.norm(v1), np.linalg.norm(v2))\n",
+    "    return nomer/denomer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/jeroen/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:4: RuntimeWarning: invalid value encountered in double_scalars\n",
+      "  after removing the cwd from sys.path.\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-78-25761c773b78>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mdistances\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0mdistances\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcalculate_distances\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfeature_matrix\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-78-25761c773b78>\u001b[0m in \u001b[0;36mcalculate_distances\u001b[0;34m(features)\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdistances\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdistances\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m             \u001b[0mdistances\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcosine_distance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfeatures\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfeatures\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mdistances\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-73-8b1e8e79dadc>\u001b[0m in \u001b[0;36mcosine_distance\u001b[0;34m(v1, v2)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mcosine_distance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mv1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mv2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mnomer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mv1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mv2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0mdenomer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlinalg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnorm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mv1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlinalg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnorm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mv2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mnomer\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mdenomer\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.6/site-packages/numpy/linalg/linalg.py\u001b[0m in \u001b[0;36mnorm\u001b[0;34m(x, ord, axis, keepdims)\u001b[0m\n\u001b[1;32m   2165\u001b[0m                 \u001b[0msqnorm\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreal\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreal\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimag\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimag\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2166\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2167\u001b[0;31m                 \u001b[0msqnorm\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2168\u001b[0m             \u001b[0mret\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msqrt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msqnorm\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2169\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mkeepdims\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "#TODO from here\n",
+    "def calculate_distances(features):\n",
+    "    size = len(features)\n",
+    "    distances = np.zeros((size, size))\n",
+    "    for i in range(len(distances)):\n",
+    "        for j in range(len(distances)):\n",
+    "            distances[i,j] = cosine_distance(features[i], features[j])\n",
+    "    return distances\n",
+    "\n",
+    "distances = calculate_distances(feature_matrix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics.pairwise import cosine_distances\n",
+    "from sklearn.metrics.pairwise import cosine_similarity"
    ]
   },
   {
@@ -284,10 +275,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "\n",
-    "        "
-   ]
+   "source": []
   }
  ],
  "metadata": {
