noise removal DBSCAN complete

--- a/Data Project.ipynb
+++ b/Data Project.ipynb
@@ -894,13 +894,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 324,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "dbscan_filtered_tweets = feature_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 325,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2001, 4480)"
+      ]
+     },
+     "execution_count": 325,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dbscan_filtered_tweets.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 326,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.,  0.,  0., ...,  0.,  0.,  0.])"
+      ]
+     },
+     "execution_count": 326,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dbscan_filtered_tweets[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 322,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2001, 1)"
+      ]
+     },
+     "execution_count": 322,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "consensus_DBSCAN_results.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 327,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dbscan_filtered_tweets = np.empty([0,4480])\n",
+    "for c in range(0,consensus_DBSCAN_results.shape[0]):\n",
+    "    if consensus_DBSCAN_results[c][0] == 0:\n",
+    "        dbscan_filtered_tweets = np.vstack((dbscan_filtered_tweets, feature_matrix[c]))\n",
+    "    \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 328,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1927, 4480)"
+      ]
+     },
+     "execution_count": 328,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dbscan_filtered_tweets.shape"
    ]
   },
   {
