DBSCAn scikit fixx

--- a/Data Project.ipynb
+++ b/Data Project.ipynb
@@ -631,7 +631,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "DBSCAN version Scikit"
+    "<h1>DBSCAN Scikit version</h1>"
    ]
   },
   {
@@ -653,7 +653,7 @@
    ],
    "source": [
     "from sklearn.cluster import DBSCAN\n",
-    "#\n",
+    "\n",
     "consensus_DBSCAN = np.zeros((feature_matrix.shape[0],5))\n",
     "i = 0\n",
     "epscount = 1.05\n",
@@ -773,7 +773,7 @@
     "scrolled": false
    },
    "source": [
-    "DBSCAN"
+    "<h1>DBSCAN old WPO version</h1>"
    ]
   },
   {
