k means final results

--- a/Data Project.ipynb
+++ b/Data Project.ipynb
@@ -27,15 +27,17 @@
     "\n",
     "\n",
     "\n",
-    "<a href='#section1'>4 Noise removal DBSCAN</a>\n",
+    "<a href='#section4'>4 Noise removal DBSCAN</a>\n",
     "\n",
-    "<a href='#section1'>1 Preprocessing</a>\n",
+    "&nbsp;&nbsp;<a href='#section4_1'>4.1 creating the matrix to filter out noise points</a>\n",
     "\n",
-    "<a href='#section1'>1 Preprocessing</a>\n",
+    "&nbsp;&nbsp;<a href='#section4_2'>4.2. Filter the DBSCAN noisy tweets out and produce the two datasets</a>\n",
     "\n",
-    "<a href='#section1'>1 Preprocessing</a>\n",
+    "<a href='#section5'>5 Running K means on the two filtered datasets</a>\n",
     "\n",
-    "<a href='#section1'>1 Preprocessing</a>"
+    "<a href='#section6'>6 Final results</a>\n",
+    "\n",
+    "<a href='#section7'>7 Top ten of each cluster</a>"
    ]
   },
   {
@@ -353,7 +355,7 @@
    "metadata": {},
    "source": [
     "<a id='section3_1'></a>\n",
-    "### Creating the consensus matrix with k-means"
+    "### 3.1 Creating the consensus matrix with k-means"
    ]
   },
   {
@@ -412,7 +414,7 @@
    "metadata": {},
    "source": [
     "<a id='section3_2'></a>\n",
-    "## 10 percent treshold of the consensus matrix\n",
+    "## 3.2. 10 percent treshold of the consensus matrix\n",
     "In this step, if a pair (i, j) of tweets did not cluster together more than 10% of the total number of runs, the position (i, j) in the consensus matrix is set to 0."
    ]
   },
@@ -461,7 +463,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "row_mean = consensus_matrix.mean(1)\n",
@@ -483,7 +487,7 @@
    },
    "source": [
     "<a id='section4'></a>\n",
-    "## Noise removal with DBSCAN (SciKit)"
+    "## 4. Noise removal with DBSCAN (SciKit)"
    ]
   },
   {
@@ -538,7 +542,7 @@
    "metadata": {},
    "source": [
     "<a id='section4_1'></a>\n",
-    "## creating the matrix to filter out noise points"
+    "## 4.1. Creating the matrix to filter out noise points"
    ]
   },
   {
@@ -580,7 +584,7 @@
    "source": [
     "<a id='section4_2'></a>\n",
     "\n",
-    "## Filter the DBSCAN noisy tweets out and produce the two datasets"
+    "## 4.2. Filter the DBSCAN noisy tweets out and produce the two datasets"
    ]
   },
   {
@@ -619,7 +623,7 @@
    "source": [
     "<a id='section5'></a>\n",
     "\n",
-    "## Running K means on the Datasets\n",
+    "## 5. Running K means on the two filtered datasets\n",
     "\n",
     "Here we construct the two consensus matrices for the datasets"
    ]
@@ -665,7 +669,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Final clustering result"
+    "<a id='section6'></a>\n",
+    "## 6. Final clustering result"
    ]
   },
   {
@@ -689,6 +694,14 @@
    "source": [
     "labels_kmeans, centroids_kmeans = kmeans(consensus_kmeans, 9)\n",
     "labels_dbscan, centroids_dbscan = kmeans(consensus_dbscan, 9)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='section7'></a>\n",
+    "## 7. Top ten of each cluster"
    ]
   },
   {
@@ -925,7 +938,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
